test/errors/list/count_bad_type.np
l = [1]
l.count("one")
